# BankSheets

./: .gitignore  .pre-commit-config.yaml  entry.py  institution.py  main.py  pyproject.toml  readme.md  setup.cfg  test_entry.py
data/: schema.sql
src/banksheets/: banksheet_converter.py  database.py  entry.py  institution.py  institution_parser.py  main.py  sql_commands.py  transaction_reader.py
src/banksheets/app/: main.py
src/banksheets/data/: schema.sql
src/banksheets/ui/: common.py
tests/: conftest.py  test_banksheet_converter.py  test_entry.py  test_sql.py  test_transaction_reader.py
tests/sample_data/: sample_bofa_bank.csv  sample_bofa_cc.csv  sample_wells_bank.csv
tests/ui/: test_common.py
